tests/baselines/reference/defaultExportsCannotMerge01.errors.txt
tests/cases/conformance/es6/modules/m1.ts(1,25): error TS2652: Merged declaration 'Decl' cannot include a default export declaration. Consider adding a separate 'export default Decl' declaration instead.
tests/cases/conformance/es6/modules/m1.ts(10,18): error TS2652: Merged declaration 'Decl' cannot include a default export declaration. Consider adding a separate 'export default Decl' declaration instead.
tests/cases/conformance/es6/modules/m2.ts(1,20): error TS2307: Cannot find module 'm1' or its corresponding type declarations.


==== tests/cases/conformance/es6/modules/m1.ts (2 errors) ====
    export default function Decl() {
                            ~~~~
!!! error TS2652: Merged declaration 'Decl' cannot include a default export declaration. Consider adding a separate 'export default Decl' declaration instead.
        return 0;
    }
    
    export interface Decl {
        p1: number;
        p2: number;
    }
    
    export namespace Decl {
                     ~~~~
!!! error TS2652: Merged declaration 'Decl' cannot include a default export declaration. Consider adding a separate 'export default Decl' declaration instead.
        export var x = 10;
        export var y = 20;
    
        interface I {
        }
    }
    
==== tests/cases/conformance/es6/modules/m2.ts (1 errors) ====
    import Entity from "m1"
                       ~~~~
!!! error TS2307: Cannot find module 'm1' or its corresponding type declarations.
    
    Entity();
    
    var x: Entity;
    var y: Entity.I;
    
    Entity.x;
    Entity.y;